--- a/views/layout.html
+++ b/views/layout.html
@@ -20,22 +20,16 @@
 <link rel="stylesheet" href="/css/diffview.css?05e3f5dd">
 <link rel="stylesheet" href="/css/katex.min.css?7ee60c84">
 <link rel="stylesheet" href="/css/wiki.css?faf4591a">
-<link rel="stylesheet" href="/skins/liberty/css/font-awesome.min.css?0831cba6">
-<link rel="stylesheet" href="/skins/liberty/bootstrap/css/bootstrap.min.css?b00faad1">
-<link rel="stylesheet" href="/skins/liberty/css/font/Noto Sans KR.css?c6e98732">
-<link rel="stylesheet" href="/skins/liberty/css/default.css?d8c39a8a">
-<link rel="stylesheet" href="/skins/liberty/css/default_mobile.css?43859cfb">
-<link rel="stylesheet" href="/skins/liberty/css/jquery-ui.min.css?840cca94">
-<link rel="stylesheet" href="/skins/liberty/css/theseed.css?17a73fce">
+{% for file in cssFiles %}
+<link rel="stylesheet" href="{{ file|safe }}">
+{% endfor %}
 <!--[if (!IE)|(gt IE 8)]><!--><script type="text/javascript" src="/js/jquery-2.1.4.min.js?f9c7afd0"></script><!--<![endif]-->
 <!--[if lt IE 9]><script type="text/javascript" src="/js/jquery-1.11.3.min.js?895323ed"></script><![endif]-->
 <script type="text/javascript" src="/js/dateformatter.js?508d6dd4"></script>
 <script type="text/javascript" src="/js/intersection-observer.js?b462101e"></script>
-<script type="text/javascript" src="/skins/liberty/js/lib/bootstrap.min.js?c5b5b2fa"></script>
-<script type="text/javascript" src="/skins/liberty/js/lib/jquery-ui.min.js?557e2375"></script>
-<script type="text/javascript" src="/skins/liberty/js/live_Recents.js?0e90eb6d"></script>
-<script type="text/javascript" src="/skins/liberty/js/layout.js?4c4bbecc"></script>
-<script type="text/javascript" src="/skins/liberty/js/theseed.js?acc669c9"></script>
+{% for file in jsFiles %}
+<script type="text/javascript" src="{{ file|safe }}"></script>
+{% endfor %}
 </head>
 <body class="Liberty">
   {{ rendered_skin|safe }}
